# charmhub-lp-tools

./: .coveragerc  .gitignore  HISTORY.md  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: snapcraft.yaml  tox.yml
charmhub_lp_tools/: __init__.py  charm_project.py  charmhub.py  constants.py  ensure_series.py  exceptions.py  gitutils.py  group_config.py  launchpadtools.py  main.py  osci_sync.py  parsers.py  reports.py  revisions.py  schema.py
charmhub_lp_tools/templates/: __init__.py  all_builds.html.j2  charms_per_track.html.j2  index.html.j2  index_charms_per_track.html.j2
charmhub_lp_tools/tests/: __init__.py  base.py  test_charm_project.py  test_ensure_series.py  test_gitutils.py  test_main.py  test_osci_sync.py  test_parsers.py  test_reports.py  test_schema.py
charmhub_lp_tools/tests/fixtures/: awesome-info.json  charmcraft-error-504.txt
charmhub_lp_tools/tests/fixtures/fake_repo/: .gitreview  osci.yaml
charmhub_lp_tools/tests/fixtures/lp-builder-config/: awesome.yaml
doc/source/: charm_project.rst  charmhub.rst  conf.py  constants.rst  ensure_series.rst  exceptions.rst  gitutils.rst  group_config.rst  index.rst  launchpadtools.rst  main.rst  osci_sync.rst  parsers.rst  reports.rst  schema.rst
snap/: snapcraft.yaml
