[metadata]
name = charmhub-lp-tools
author = OpenStack Charmers
author_email = openstack-charmers@lists.launchpad.net
summary = Tools to configure and manage repositories and Launchpad builders.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/openstack-charmers/charmhub-lp-tools
project_urls =
    Bug Tracker = https://github.com/openstack-charmers/charmhub-lp-tools/issues
    Source Code = https://github.com/openstack-charmers/charmhub-lp-tools
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    ci
    launchpad

[files]
packages = charmhub_lp_tools

[entry_points]
console_scripts =
    charmhub-lp-tool = charmhub_lp_tools.main:cli_main

